all test pass in ItemTest